[package]
name = "crypt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.37"
log = "0.4.17"
hex = "0.4.3"
anyhow = "1.0.66"
rand = "0.8.5"
rand_chacha = "0.3.1"
postcard = "1.0.2"
serde = "1.0.149"
num-bigint = "0.4"